concord_examples/tests/ui/old_mapping_arrow_removed.stderr
error: old mapping syntax `-> Json<T> | Out => ...` was removed in v5; use `-> Json<T> map Out { ... }`
 --> tests/ui/old_mapping_arrow_removed.rs:9:30
  |
9 |     GET Ping -> Json<String> | String => r;
  |                              ^

warning: unused import: `concord_core::prelude::*`
 --> tests/ui/old_mapping_arrow_removed.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
